--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     api project(':api')
 
     implementation 'com.google.code.gson:gson:2.+'
+    api 'com.guflimc.brick.scheduler:api:+'
 }
